--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
+    "react-image-appear": "^1.3.26",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
